--- a/src/componentes/BotonWhatsapp/BotonWhatsapp.css
+++ b/src/componentes/BotonWhatsapp/BotonWhatsapp.css
@@ -8,7 +8,7 @@
     background: linear-gradient(135deg, #25D366 0%, #128C7E 100%);
     border-radius: 50%;
     cursor: pointer;
-    z-index: 9999;
+    z-index: 99;
     display: flex;
     align-items: center;
     justify-content: center;
